--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="https://vk.com/vikki_gu" target="_blank">VK</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% static 'portfolio/cv_main.pdf' %}" target="_blank">CV</a>
+        <a class="nav-link" href="{% static 'portfolio/CV.pdf' %}" target="_blank">CV</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/GusevaVS" target="_blank">Github</a>
